# psychology-quote-generator

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  start.bat  start.ps1
output/: .gitkeep
resources/: quotes.csv
resources/fonts/: README.md
src/: debug_text_bounds.py  main.py  main_antialiasing.py  preview_design.py
